原始数据填充完毕

--- a/PEAnalysis/PEAnalysis/PEAnalysis.vcxproj
+++ b/PEAnalysis/PEAnalysis/PEAnalysis.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="data.h" />
     <ClInclude Include="PEAnalysis.h" />
     <ClInclude Include="tools.h" />
   </ItemGroup>
