--- a/PEAnalysis/PEAnalysis/PEAnalysis.vcxproj.filters
+++ b/PEAnalysis/PEAnalysis/PEAnalysis.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="tools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="data.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
