--- a/PEAnalysis/PEAnalysis/PEAnalysis.vcxproj
+++ b/PEAnalysis/PEAnalysis/PEAnalysis.vcxproj
@@ -48,11 +48,11 @@
     <Import Project="$(QtMsBuild)\qt_defaults.props" />
   </ImportGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <QtInstall>MSVC2017_x32</QtInstall>
+    <QtInstall>msvc2017x86</QtInstall>
     <QtModules>core</QtModules>
   </PropertyGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <QtInstall>MSVC2017_x32</QtInstall>
+    <QtInstall>msvc2017x86</QtInstall>
     <QtModules>core</QtModules>
   </PropertyGroup>
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.props')">
